--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "nyc ava",
-    "report": "nyc report --reporter=html"
+    "report": "nyc report --reporter=html",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -16,14 +23,18 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.11.7",
     "morgan": "~1.7.0",
+    "package.json": "^2.0.1",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
     "ava": "^0.22.0",
     "coveralls": "^2.13.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.3",
     "log4js": "^2.3.3",
     "mongoose": "^4.11.7",
-    "nyc": "^11.1.0"
+    "nyc": "^11.1.0",
+    "prettier": "^1.5.3"
   }
 }
