--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "express": "^4.14.1",
     "hbs": "~4.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.7",
