--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "istanbul cover _mocha",
-    "precommit": "lint-staged"
+    "test": "istanbul cover _mocha"
   },
   "lint-staged": {
     "*.js": [
@@ -31,6 +30,11 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "coveralls": "^2.13.1",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.2.1",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "log4js": "^2.3.3",
